--- a/NiceAdmin/02.html
+++ b/NiceAdmin/02.html
@@ -11,23 +11,32 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-2">
-                <div class="card"></div>
-            </div>
-            <div class="col-1"></div>
-            <div class="col-2">
-                <div class="card"></div>
-            </div>
-            <div class="col-1"></div>
-            <div class="col-2">
-                <div class="card"></div>
-            </div>
-            <div class="col-2"></div>
-        </div>
-    </div>
+    <table data-pagination="false">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Username</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>John</td>
+            <td>Doe</td>
+            <td>@johndoe</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Jane</td>
+            <td>Doe</td>
+            <td>@janedoe</td>
+          </tr>
+          <!-- more table rows -->
+        </tbody>
+      </table>
+      
 
 </body>
 
